Update LocalKnowledgeBase.java